# Raylib-Gallery

./: CMakeLists.txt  README.md  compile_console.md  send.sh
src/: Config.h  Controller.cpp  Controller.h  main.cpp
src/data/: DeviceManager.cpp  DeviceManager.h  ImageRepository.cpp  ImageRepository.h
src/model/: AppState.h  Photo.h
src/ui/: Renderer.cpp  Renderer.h  Theme.h
